Fixed an issue that the plugin setting page layout broke in IE and Firefox.
git-svn-id: https://plugins.svn.wordpress.org/amazon-auto-links/trunk@823643 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin.css
+++ b/css/admin.css
@@ -189,6 +189,6 @@ textarea.read-only {
 }		
 
 /* To give the footer area more space */
-#wpcontent, #wpbody {  
-	margin-bottom: 72px; 
-}"
+#wpbody-content {
+	padding-bottom: 140px;
+}
